--- a/template/android/app/src/main/res/drawable/launch_screen.xml
+++ b/template/android/app/src/main/res/drawable/launch_screen.xml
@@ -2,7 +2,7 @@
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <solid android:color="@color/colorPrimary" />
+            <solid android:color="@color/color_splashscreen" />
         </shape>
     </item>
 </layer-list>
